--- a/index (orig).html
+++ b/index (orig).html
@@ -59,7 +59,7 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="row row-footer">             
+            <div class="row">             
                 <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
